@startuml
skinparam classAttributeIconSize 0

Main --> Ahorcado
Jugador --> Ahorcado
Dibuixar --> Ahorcado

class Jugador {
    -idJugador : int
    -nomJugador : String
    +Jugador(idJugador: int, nomJugador : String)
    +getIdJugador()
}

class ParaulesDisponibles {
    paraules : arrayList<String>
    llegirTxt() : void
}

class Ahorcado {
    -numJugadors : int
    -tornJugador : int
    -videsDisponibles
    -paraulaMisteriosa : String
    -lletresUtilitzades[] : char
    -lletresDisponibles[] : char
    -nivellDificultat : int
    +Ahoracado(numJugadors : int, nivellDificultat : int)
}

class Dibuixar {
-dibuixDelMoment
-paraulaMisteriosa
-carcatersAMostrar[] : char
+dibuixarAhoracado() : void
+dibuixarParaulaMisteriosa() : void
}

class Main {
    iniciarJoc() : void
}
@enduml